charts/templates/network-policies/deny-egress-by-default.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-egress-by-default
spec:
  podSelector:
    matchLabels:
      app: hello-uname
  policyTypes:
    - Egress
  egress:
    - ports:
        - protocol: UDP
          port: 53
      to:
        - podSelector:
            matchLabels:
              k8s-app: kube-dns
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
